added github link to github button

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="flex-shrink-0 flex items-center">
             <span class="text-white comname ml-2">TheFetcher</span>
         </div>
-        <a href="#" class="hover:text-gray-500 transition duration-500"><i class="fab fa-github object-right text-white ml-3 w-auto"></i></a>
+        <a href="https://github.com/gavrielshalom/TheFetcher" class="hover:text-gray-500 transition duration-500"><i class="fab fa-github object-right text-white ml-3 w-auto"></i></a>
     </nav>
     <div class="text-center mt-5 subpixel-antialiased">
         <span class="block font-semibold text-2xl">Welcome!</span>
